--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     -->
     <title>React App</title>
   </head>
+
+  <!-- 카카오맵 API 추가-->
+  <script
+    type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c38e883511c754b03620ed4d6239d8e5&autoload=false"
+  ></script>
+ 
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
