--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/birthday-cake.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="시호의 돌잔치에 여러분을 초대합니다! 함께 축하해주세요."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+   
+    <title>시호 돌잔치 초대장</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph 기본 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://itseungyeon.github.io/siho-1st-birthday/" />
+    <meta property="og:title" content="시호 돌잔치 초대장" />
+    <meta property="og:description" content="시호 돌잔치에 여러분을 초대합니다! 함께 축하해주세요." />
+    <meta property="og:image" content="https://itseungyeon.github.io/siho-1st-birthday/images/preview.jpg" />
+
+    <!-- 추가 Open Graph -->
+    <meta property="og:site_name" content="시호 돌잔치" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="시호 돌잔치 초대장" />
+    <meta name="twitter:description" content="시호 돌잔치에 여러분을 초대합니다! 함께 축하해주세요." />
+    <meta name="twitter:image" content="https://itseungyeon.github.io/siho-1st-birthday/preview.jpg" />
+
+
   </head>
 
   <!-- 카카오맵 API 추가-->
